GEODE-10129: Forward opens/exports to child JVMs (#7457)
* GEODE-10129: Forward opens/exports to child JVMs

Several tests and test framework classes launch child JVMs to run Geode
product and test code. Those tests and classes now forward the test
JVM's `--add-opens` and `--add-exports` options to the child JVMs.

* export sun.reflect.generics.repository

* Restore inadvertently removed ProcessManager args