@@ -17,6 +17,7 @@ package org.apache.geode.test.dunit.internal;
 import static java.util.stream.Collectors.joining;
 import static org.apache.geode.distributed.ConfigurationProperties.ENABLE_NETWORK_PARTITION_DETECTION;
 import static org.apache.geode.distributed.internal.DistributionConfig.MEMBERSHIP_PORT_RANGE_NAME;
+import static org.apache.geode.test.process.JavaModuleHelper.getJvmModuleOptions;
 import static org.apache.geode.util.internal.GeodeGlossary.GEMFIRE_PREFIX;
 
 import java.io.BufferedReader;
@@ -44,8 +45,6 @@ import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
 
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang3.JavaVersion;
-import org.apache.commons.lang3.SystemUtils;
 
 import org.apache.geode.distributed.ConfigurationProperties;
 import org.apache.geode.distributed.internal.DistributionConfig;
@@ -315,15 +314,7 @@ class ProcessManager implements ChildVMLauncher {
     cmds.add("-XX:MetaspaceSize=512m");
     cmds.add("-XX:SoftRefLRUPolicyMSPerMB=1");
     cmds.add(agent);
-    if (SystemUtils.isJavaVersionAtLeast(JavaVersion.JAVA_9)) {
-      // needed for client stats gathering, see VMStats50 class, it's using class inspection
-      // to call getProcessCpuTime method
-      cmds.add("--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED");
-      // needed for server side code
-      cmds.add("--add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED");
-      cmds.add("--add-opens=java.base/jdk.internal.module=ALL-UNNAMED");
-      cmds.add("--add-opens=java.base/java.lang.module=ALL-UNNAMED");
-    }
+    cmds.addAll(getJvmModuleOptions());
     cmds.add(ChildVM.class.getName());
     String[] rst = new String[cmds.size()];
     cmds.toArray(rst);
